# cookiecutter-message-schemas

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.slug }}-messages/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
{{ cookiecutter.slug }}-messages/.github/workflows/: main.yaml  main.yml
{{ cookiecutter.slug }}-messages/.reuse/: dep5
{{ cookiecutter.slug }}-messages/tests/: test_common.py  test_thing.py  utils.py
{{ cookiecutter.slug }}-messages/{{ cookiecutter.pkg_name }}_messages/: __init__.py  base.py  thing.py
{{ cookiecutter.slug }}-messages/{{ cookiecutter.pkg_name }}_messages/tests/: test_common.py  test_thing.py  utils.py
