[metadata]
name = {{ cookiecutter.slug }}-messages
version = 1.0.0
description = A schema package for messages sent by {{ cookiecutter.name }}
long_description = file: README.md
url = {{ cookiecutter.url }}
maintainer = Fedora Infrastructure Team
maintainer_email = infrastructure@lists.fedoraproject.org
keywords = fedora
platforms = Fedora, GNU/Linux
license = GPLv2+
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  fedora_messaging

[options.entry_points]
fedora.messages =
    {{ cookiecutter.pkg_name }}.new={{ cookiecutter.pkg_name }}_messages.thing:NewThingV1



[bdist_wheel]
universal = 1

[flake8]
show-source = True
max-line-length = 100
exclude = .git,.tox,dist,*egg,build,venv,.venv
ignore = E203,W503

[tool:pytest]
testpaths = {{ cookiecutter.pkg_name }}_messages/tests/

[coverage:run]
branch = True
source = {{ cookiecutter.pkg_name }}_messages

[coverage:paths]
source =
   {{ cookiecutter.pkg_name }}_messages
   .tox/*/site-packages/{{ cookiecutter.pkg_name }}_messages

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
omit =
    {{ cookiecutter.pkg_name }}_messages/tests/*
